<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TextView
        android:id="@+id/topic_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_alignParentLeft="true"
       android:layout_marginLeft="20dp"
        android:text="@string/from_topic" />
    <TextView
        android:id="@+id/topicId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_toRightOf="@+id/topic_tv" />
 	<TextView
        android:id="@+id/questionDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/topicId"
        android:layout_alignParentLeft="true"
       android:layout_marginLeft="20dp"
        android:text="questionDescription" />
 	
 	<LinearLayout 
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:orientation="horizontal"
 	    android:id="@+id/question_list_bar"
 	    android:layout_below="@+id/questionDescription">
 	    
 	    <TextView
        android:id="@+id/question_writeAnswer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_marginLeft="20dp"
        android:layout_gravity="center"
		android:background="@color/transparent"
		android:drawableLeft="@drawable/write"
        android:text="@string/write_answer"
        android:textSize="12sp"
        android:textColor="@color/blue" />
 	     <TextView
        android:id="@+id/questionCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_marginLeft="20dp"
       android:textSize="12sp" />
 	    <TextView
        android:id="@+id/question_concernquestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_marginLeft="20dp"
        android:text="@string/concern_question" 
        android:textSize="12sp"/>
 	    <TextView
        android:id="@+id/question_neglect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
       android:layout_marginLeft="20dp"
        android:text="@string/neglect"
        android:textSize="12sp" />
 	</LinearLayout>
 
</RelativeLayout>

